--- a/assignment4b/index.html
+++ b/assignment4b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Fancy Button</title>
-
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+<a href="https://www.target.com/">
+  <p> My Cool Button</p>
 
-    
+</a>
+
   </body>
 </html>
