--- a/assignment4b/index.html
+++ b/assignment4b/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Fancy Button</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+@import url('https://fonts.googleapis.com/css?family=Satisfy&display=swap');
+</style>
+
   </head>
   <body>
-<a href="https://www.target.com/">
+<a target="_blank" href="https://www.target.com/">
   <p> My Cool Button</p>
 
 </a>
