--- a/assignment4b/index.html
+++ b/assignment4b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Fancy Button</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-
+<link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
   </head>
   <body>
 <a target="_blank" href="https://www.target.com/">
